# hangul-cd

./: README.md
lib/: Cargo.toml  README.md
lib/src/: block.rs  chars.rs  compose.rs  jamo.rs  lib.rs  string.rs  word.rs
src/: chars.rs  compose.rs
tui/: README.md
tui/src/: main.rs
